--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <hr>
     <div class="jumbotron">
     <p class="text-left lead"> Hello, I'm a Ph.D. student in Computer Science department at Princeton Univeristy, 
-      advised by <a href="https://www.cs.princeton.edu/~mfreed">Prof. Michael J. Freedman</a>. My research interests are in distributed systems and storage. My current research focuses on building fast and affordable key-value stores on blended storage. I completed my master's at University of Illinois Urbana-Champaign under the guidance of <a href="http://indy.cs.illinois.edu">Prof. Indranil Gupta</a>, with focus on interactive analytics systems. Prior to that, I worked at Qualcomm and Apple, and built high-impact mobile computing systems.
+      advised by <a href="https://www.cs.princeton.edu/~mfreed">Prof. Michael J. Freedman</a>. My research interests are in distributed systems and storage. My current research focuses on building fast and affordable key-value stores on emerging storage technologies. I completed my master's at University of Illinois Urbana-Champaign under the guidance of <a href="http://indy.cs.illinois.edu">Prof. Indranil Gupta</a>, with focus on real-time analytics systems. Prior to that, I worked at Qualcomm and Apple, and built high-impact mobile computing systems.
     <br>
     <!-- Here are some of my recent research projects
     <br> -->
